# Learning-Python-Roadmap

./: Final Folder Tree  pyproject.toml
.github/workflows/: python-ci.yml
src/calc/: __init__.py  cli.py
tests/: test_calc.py
